Model on mobile fixes

--- a/client/src/containers/shared/message-modal/message-modal.scss
+++ b/client/src/containers/shared/message-modal/message-modal.scss
@@ -6,26 +6,32 @@
   height: 100vh;
 
   &_bio {
-    padding: 60px 10px 0px 65px;
+    padding: 50px 20px 20px 20px;
     font-family: $font-family-monospace;
-    background-image: url(../../../images/background_paper_lg.png);
-    background-repeat: repeat-y;
+    background-repeat: no-repeat;
     background-size: contain;
     background-attachment: fixed;
+    overflow: scroll;
   }
   .MuiPaper-root {
     transform: rotate(0deg);
     max-height: 100%;
     margin: 0px;
+    overflow: hidden;
+    background-color: white;
   }
 
   @include mq($layout-m) {
     height: auto;
     .MuiPaper-root {
       transform: rotate(-2deg);
+      margin: 40px;
+      max-height: 510px;
+      background-color: transparent;
     }
     &_bio {
       padding: 100px 55px 20px 105px;
+      background-image: url(../../../images/background_paper_lg.png);
     }
   }
 }
