--- a/client/src/theme/global.scss
+++ b/client/src/theme/global.scss
@@ -204,12 +204,12 @@ h6 {
 
   &__absolute {
     position: absolute;
-    z-index: 0;
+    z-index: -3;
     width: 100%;
     height: 100vh;
 
     &_25 {
-      z-index: 0;
+      z-index: -3;
       width: 100%;
       height: 100vh;
       position: absolute;
@@ -217,7 +217,7 @@ h6 {
     }
 
     &_50 {
-      z-index: 0;
+      z-index: -3;
       width: 100%;
       height: 100vh;
       position: absolute;
